--- a/dvc.yaml
+++ b/dvc.yaml
@@ -9,3 +9,16 @@ stages:
     outs: 
       - artifcats/raw_local_dir/data.csv
 
+  split_data:
+    cmd: python src/stage_02_split_data.py --config=config/config.yaml --params=params.yaml
+    deps:
+      - src/stage_02_split_data.py
+      - src/utils/all_utils.py
+      - config/config.yaml
+    params: 
+      - base.random_state
+      - base.test_size
+    outs: 
+      - artifcats/split_data_dir/train.csv
+      - artifcats/split_data_dir/test.csv
+
